# swagger.json
@@ -347,11 +347,14 @@
           }
         ],
         "responses": {
-          "201": {
-            "description": "Created"
+          "200": {
+            "description": "OK"
           },
           "400": {
             "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
           }
         },
         "requestBody": {
@@ -360,24 +363,6 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "contractNumber": {
-                    "example": "any"
-                  },
-                  "supplier": {
-                    "example": "any"
-                  },
-                  "object": {
-                    "example": "any"
-                  },
-                  "startDate": {
-                    "example": "any"
-                  },
-                  "endDate": {
-                    "example": "any"
-                  },
-                  "value": {
-                    "example": "any"
-                  },
                   "status": {
                     "example": "any"
                   }
